syntax = "proto3";

option csharp_namespace = "Codemy.SearchProto";

package search;

service CourseIndexService {
  // index a course
  rpc IndexCourse (CourseIndexRequest) returns (CourseIndexResponse);
}

// Request
message CourseIndexRequest {
  string id = 1;
  string instructorId = 2;
  string title = 3;
  string description = 4;
  string thumbnail = 5;
  int32 status = 6;
  string duration = 7; 
  double price = 8;
  int32 level = 9;
  int32 numberOfModules = 10;
  string categoryId = 11;
  string language = 12;
  int32 numberOfReviews = 13;
  double averageRating = 14;
}

// Response
message CourseIndexResponse {
  bool success = 1;
  string message = 2;
}
